--- a/secret.html
+++ b/secret.html
@@ -2,17 +2,18 @@
 <html lang="en">
     <head>
         <title>Secret Message</title>
+        <meta name="author", description="Kelly Ye"/>
     </head>
     <body>
         <h2>This is a secret message!</h2>
-        <???>
-            <???>Name:</???>
-            <??? type="???" id="name">
+        <form>
+            <p>Name:</p>
+            <input type="text" id="name">
             <br>
-            <???>Email:</???>
-            <??? type="???" id="email">
+            <p>Email:</p>
+            <input type="text" id="email">
             <br>
-            <??? type="???">
-        </???>
+            <input type="submit">
+        </form>
     </body>
 </html>
